updated the template for nodemailer config

--- a/social_network/config/mail.js.template
+++ b/social_network/config/mail.js.template
@@ -1,3 +1,4 @@
+// @todo: need to understand how to define this mail config file
 module.exports = function() {
 	return {
 	    "service": "Gmail",
@@ -6,4 +7,4 @@ module.exports = function() {
 	        "pass": "userpass"
 	    }
     };
-};
+}();
